# dvrk_record

./: CMakeLists.txt  LICENSE  README.md  image.qrc  package.xml
include/: GraphicalUserInterface.h  aspectratiopixmaplabel.h  logger.h
src/: GraphicalUserInterface.cpp  GraphicalUserInterface.ui  aspectratiopixmaplabel.cpp  logger.cpp  main.cpp  qnode.cpp
